--- a/Domolend/css/style.css
+++ b/Domolend/css/style.css
@@ -10,6 +10,48 @@ ul, li {
 .clearAll {
   clear: both; }
 
+.table_type_2 {
+  border: 1px solid #cdcdcd;
+  border-collapse: collapse; }
+  .table_type_2 img {
+    margin: 0 auto;
+    display: block; }
+  .table_type_2 .fw_medium {
+    font-size: 12px; }
+  .table_type_2 .bx_stars_rating_votes {
+    color: #ffcc00; }
+  .table_type_2 tr:nth-child(5) td {
+    width: 150px;
+    text-align: justify;
+    padding: 0 10px; }
+  .table_type_2 tr td:first-child, .table_type_2 tr th {
+    text-align: center;
+    margin-top: 15px;
+    color: #3b3b3b;
+    font-size: 14px;
+    font-family: 'Roboto', sans-serif;
+    background: #f5f5f5;
+    font-weight: normal;
+    vertical-align: middle;
+    border: 1px solid #cdcdcd; }
+  .table_type_2 tr td {
+    text-align: center;
+    padding: 5px; }
+  .table_type_2 tr:last-child td {
+    height: 80px;
+    vertical-align: middle; }
+  .table_type_2 .OGR {
+    margin-top: 5px; }
+    .table_type_2 .OGR a {
+      color: #642bb1;
+      width: 40px;
+      height: 40px;
+      border: 1px solid #642bb1;
+      box-sizing: border-box;
+      display: inline-block;
+      text-align: center;
+      line-height: 38px; }
+
 .video {
   margin: 0 auto;
   display: block; }
@@ -127,6 +169,7 @@ ul, li {
     padding-left: 8px;
     border-left: 1px solid black; }
   .likeWatch i.fa-heart-o, .likeWatch i.fa-eye {
+    cursor: pointer;
     font-size: 18px !important; }
   .likeWatch i.fa-heart-o {
     padding-right: 6px; }
@@ -255,7 +298,7 @@ ul, li {
   top: 70px;
   left: 0;
   background: #ffcc33;
-  z-index: 9000;
+  z-index: 1000;
   width: 350px; }
   .subMenu ul {
     display: block;
@@ -2958,6 +3001,10 @@ hr {
   display: none; }
 
 .callbackForm {
+  transition: 0.1s top;
+  -webkit-transition: 0.1s top;
+  -o-transition: 0.1s top;
+  -moz-transition: 0.1s top;
   display: none;
   box-sizing: border-box;
   padding-top: 10px;
@@ -3274,6 +3321,9 @@ hr {
     margin: 0 auto;
     float: none; } }
 @media screen and (min-width: 320px) and (max-width: 425px) {
+  .ogrClass {
+    overflow-x: auto; }
+
   .goods_sliders, .goods_sliders1, .goods_sliders2 {
     width: 250px !important; }
 
@@ -3615,6 +3665,12 @@ hr {
     text-align: left; }
     table.backet tbody tr {
       height: 80px; }
+  table.backet a.butt3 {
+    padding: 0;
+    width: 50px;
+    border-radius: 5px; }
+    table.backet a.butt3 span {
+      display: none; }
 
   .centered input[type='text'] {
     width: 60px; }
