--- a/Domolend/css/style.scss
+++ b/Domolend/css/style.scss
@@ -34,6 +34,67 @@ ul, li {
   clear: both;
 }
 
+.table_type_2 {
+  border: 1px solid #cdcdcd;
+  border-collapse: collapse;
+  img{
+    margin:0 auto;
+    display: block;
+  }
+
+  .fw_medium{
+    font-size: 12px;
+  }
+
+  .bx_stars_rating_votes{
+    color: #ffcc00;
+  }
+
+  tr:nth-child(5) {
+    td {
+      width: 150px;
+      text-align: justify;
+      padding: 0 10px;
+    }
+  }
+  tr {
+    td:first-child, th {
+      text-align: center;
+      margin-top: 15px;
+      color: #3b3b3b;
+      font-size: 14px;
+      font-family: 'Roboto', sans-serif;
+      background: #f5f5f5;
+      font-weight: normal;
+      vertical-align: middle;
+      border: 1px solid #cdcdcd;
+    }
+    td{
+      text-align: center;
+      padding:5px;
+    }
+    }
+  tr:last-child{
+    td{
+      height: 80px;
+      vertical-align: middle;
+    }
+  }
+  .OGR{
+    margin-top:5px;
+    a{
+      color: #642bb1;
+      width: 40px;
+      height: 40px;
+      border: 1px solid #642bb1;
+      box-sizing: border-box;
+      display: inline-block;
+      text-align: center;
+      line-height: 38px;
+    }
+  }
+}
+
 .video {
   margin: 0 auto;
   display: block;
@@ -179,6 +240,7 @@ ul, li {
   }
 
   i.fa-heart-o, i.fa-eye {
+    cursor: pointer;
     font-size: 18px !important;
   }
 
@@ -324,7 +386,7 @@ ul, li {
   top: 70px;
   left: 0;
   background: #ffcc33;
-  z-index: 9000;
+  z-index: 1000;
   width: 350px;
 
   ul {
@@ -3362,6 +3424,7 @@ hr {
 }
 
 .callbackForm {
+  @include transition(0.1s, top);
   display: none;
   box-sizing: border-box;
   padding-top: 10px;
@@ -3790,6 +3853,10 @@ hr {
 }
 
 @media screen and(min-width: 320px) and(max-width: 425px) {
+
+  .ogrClass{
+    overflow-x: auto;
+  }
 
   .goods_sliders, .goods_sliders1, .goods_sliders2 {
     width: 250px !important;
@@ -4266,6 +4333,16 @@ hr {
       text-align: left;
       tr {
         height: 80px;
+      }
+    }
+
+    a.butt3 {
+      padding: 0;
+      width: 50px;
+      border-radius: 5px;
+
+      span {
+        display: none;
       }
     }
   }
